<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:clipChildren="false"
    android:clipToPadding="false">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:visibility="invisible"
        android:clipChildren="false"
        android:clipToPadding="false">

        <LinearLayout
            android:id="@+id/searchLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:clipChildren="false"
            android:clipToPadding="false">

            <Space
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/movies"
                android:textSize="30sp"
                android:layout_margin="8dp"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_movies_search"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"/>

            <TextView
                android:id="@+id/no_results_movies"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="#fff"
                android:gravity="center_horizontal"
                android:text="@string/no_results"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/tv_shows"
                android:textSize="30sp"
                android:layout_margin="8dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_tv_search"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"/>

            <TextView
                android:id="@+id/no_results_tv"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textColor="#fff"
                android:gravity="center_horizontal"
                android:text="@string/no_results"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </LinearLayout>

    </ScrollView>

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/background_searchview"
        app:elevation="4dp"
        app:iconifiedByDefault="false"
        app:queryBackground="@android:color/transparent"
        app:queryHint="@string/search"
        app:searchIcon="@null" />

</RelativeLayout>