<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/colorPrimaryDark"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:strokeColor="@color/colorAccentSecondary"
                app:strokeWidth="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/movies"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="30sp" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/most_popular_today"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_movies_most_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:scrollbars="none" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/latest_updates"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_movies_latest_updates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:scrollbars="none" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@color/colorPrimaryDark"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:strokeColor="@color/colorAccentSecondary"
                app:strokeWidth="1dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/tv_shows"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="30sp" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/most_popular_today"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_tv_most_popular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:scrollbars="none" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/latest_updates"
                android:textColor="@color/colorAccent"
                android:textSize="20sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_tv_latest_updates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipChildren="false"
                android:clipToPadding="false"
                android:scrollbars="none" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </LinearLayout>

</ScrollView>


