<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView android:id="@+id/scrollView"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Space
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="ScrollViewSize">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:strokeColor="@color/colorAccentSecondary"
                    app:strokeWidth="1dp"
                    android:layout_margin="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text="@string/movies"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        android:gravity="center_horizontal"
                        android:layout_margin="8dp"/>

                </com.google.android.material.card.MaterialCardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_movies"
                    android:scrollbars="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="2dp"
                    app:strokeColor="@color/colorAccentSecondary"
                    app:strokeWidth="1dp"
                    android:layout_margin="4dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/colorAccent"
                        android:text="@string/tv_shows"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        android:layout_margin="8dp"
                        android:gravity="center_horizontal" />

                </com.google.android.material.card.MaterialCardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_tv"
                    android:scrollbars="none"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize" />

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/no_downloads"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_download"
                app:tint="@color/colorAccent"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:text="@string/no_downloads"
                android:textColor="@color/colorAccent"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>